# Turbo

./: .env.defaults  .gitignore  README.md  _openapi.yaml  kiota.js  makesdk.bat  nx.json  openapi-3.0.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md
.github/workflows/: npm-publish-github-packages.yml  publish.yml  test.yml
apps/consumer/: package.json  rsbuild.config.ts
apps/game-zone/: package.json
apps/updown/public/: index.html
chron/: chron.js
compartments/: README.md  index.ts  package-lock.json  package.json
compartments/client/: falahClient 2.ts  falahClient 3.ts  falahClient 4.ts  kiota-lock 2.json  kiota-lock 3.json  kiota-lock 4.json  kiota-lock 5.json  kiota-lock.json
compartments/client/event 2/: index 2.ts  index 3.ts
compartments/client/models/: index.ts
compartments/client/subscription 2/: index 4.ts
compartments/falah-events/: README.md  index.ts  package.json
forms/: api.ts  package.json  tailwind.config.js
forms/src/: index.tsx
forms/src/hooks/: use-events.tsx
git/: .env.defaults  chron.js  package.json
kiota/: package.json
kiota/client/: falahClient.ts  kiota-lock.json
kiota/src/: index.ts
providers/events/: .env.example  README.md  package.json  rsbuild.config.ts
providers/provider/: package.json  rsbuild.config.ts
proxy/: index.js  package.json
server/: .gitignore  Cargo.toml  package.json
server/src/: auth.rs  html.rs  main.rs
server/src/event/: mod.rs
server/src/info/: mod.rs
server/src/subscription/: ical.rs  mod.rs  rss.rs
workshop/: README.md  bun.lockb  index.ts  package.json
(+58 files in other folders)
