[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
salvo = { version = "0.75.0", features = [ "oapi", "anyhow", "jwt-auth"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
chrono = "0.4.39"
rss = "2.0.11"
rusqlite = "0.32.1"
lazy_static = "1.5.0"
time = "0.3.37"
anyhow = "1.0.95"
jsonwebtoken = "9.3.0"
